fluxcd/clusters/pi/home/uptime-kuma/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
  namespace: home
  labels:
    app: uptime
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime
  template:
    metadata:
      name: uptime
      namespace: home
      labels:
        app: uptime
    spec:
      containers:
        - name: uptime
          image: louislam/uptime-kuma:2.5.5
          ports:
            - containerPort: 3001
              name: uptime-port

          volumeMounts:
            - name: uptime-configs
              mountPath: /app/data

      volumes:
        - name: uptime-configs
          persistentVolumeClaim:
            claimName: uptime-configs-local
