fluxcd/clusters/pi/home/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime
  namespace: home
spec:
  selector:
    app: uptime
  ports:
    - name: uptime-port
      port: 80
      targetPort: uptime-port
