fluxcd/clusters/pi/home/uptime-kuma/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.uptime.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: uptime
          port: 80
    - match: Host(`uptime.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: uptime
          port: 80
  # middlewares:
  #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
